# fz-search-reranker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
dockerfiles/: train_model.dockerfile
docs/source/: index.md
fz-search-reranker/: Makefile  README.md
fz-search-reranker/dockerfiles/: predict_model.dockerfile
fz-search-reranker/docs/: mkdocs.yaml
fz-search-reranker/fz_search_reranker/: __init__.py
fz_search_reranker/: train_model.py
fz_search_reranker/configs/: config.yaml
fz_search_reranker/configs/data/: data.yaml
fz_search_reranker/configs/sys/: local.yaml  titan.yaml
fz_search_reranker/configs/training/: training.yaml
fz_search_reranker/data/: make_dataset.py  make_dataset_local_model.py
scripts/slurm/: generate_data_local.sh  train_model.sh
